--- a/ts/src/desktop/desktop.html
+++ b/ts/src/desktop/desktop.html
@@ -32,7 +32,7 @@
     <main>
         <div style="background-image: url('../../img/haloBackground.png'); height: 95vh;">
             <div id="container">
-                <span>hello</span>
+                <span>s</span>
             </div>
         </div>
         
