white background yay

--- a/ts/src/desktop/desktop.html
+++ b/ts/src/desktop/desktop.html
@@ -778,7 +778,7 @@
     </script>
 </head>
 
-<body>
+<body style="background-color: white">
     <div id="sol" class="nodisp">Gamepads don't appear to be supported
         on this browser. Bummer.</div>
 
