--- a/ts/src/desktop/desktop.html
+++ b/ts/src/desktop/desktop.html
@@ -4,12 +4,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>JavaScript Gamepad Demo</title>
-    <div class="window-controls-group">
-        <button id="minimizeButton" class="window-control window-control-minimize" />
-        <button id="maximizeButton" class="window-control window-control-maximize" />
-        <button id="closeButton" class="window-control window-control-close" />
-      </div>
+    <link rel="stylesheet" href="../../css/header.css" />
     <!--Gamepad Additions-->
     <style type="text/css">
         /* http://meyerweb.com/eric/tools/css/reset/ 
@@ -785,83 +780,106 @@
 </head>
 
 <body style="background-color: white">
-    <div id="sol" class="nodisp">Gamepads don't appear to be supported
-        on this browser. Bummer.</div>
-
-    <div id="prompt" class="nodisp">Attach a gamepad or press a gamepad
-        button</div>
-
-    <div id="main" class="nodisp">
-        <div id="button-bar">
-            <span class="button-bar-title">Gamepad: </span>
-            <span id="button-bar-box"></span>
+    <header id="header" class="app-header draggable">
+        <img src="../../img/header_icon.svg" />
+        <h1>Strafin'</h1>
+        <div class="window-controls-group">
+            <button id="minimizeButton" class="window-control window-control-minimize" />
+            <button id="maximizeButton" class="window-control window-control-maximize" />
+            <button id="closeButton" class="window-control window-control-close" />
         </div>
+    </header>
 
-        <div id="mode-select-box">
-            Mode
-            <select id="mode-select">
-                <option selected="selected" value="raw">Raw</option>
-                <option value="clamp">Clamped</option>
-            </select>
+    <main>
+        <div id="sol" class="nodisp">Gamepads don't appear to be supported
+            on this browser. Bummer.</div>
+
+        <div id="prompt" class="nodisp">Attach a gamepad or press a gamepad
+            button</div>
+
+        <div id="main" class="nodisp">
+            <div id="button-bar">
+                <span class="button-bar-title">Gamepad: </span>
+                <span id="button-bar-box"></span>
+            </div>
+
+            <div id="mode-select-box">
+                Mode
+                <select id="mode-select">
+                    <option selected="selected" value="raw">Raw</option>
+                    <option value="clamp">Clamped</option>
+                </select>
+            </div>
+
+            <div id="deadzone-box">
+                Deadzone
+                <input type="checkbox" id="deadzone">
+            </div>
+
+            <hr>
+
+            <div id="gamepad-container">
+            </div>
         </div>
-
-        <div id="deadzone-box">
-            Deadzone
-            <input type="checkbox" id="deadzone">
-        </div>
-
-        <hr>
-
-        <div id="gamepad-container">
-        </div>
-    </div>
-    <div id="logs">
-        <div id="events" class="logColumn">
-          <h1>Game Events</h1>
-          <div id="eventsLog" class="dataText">
+        
+        <div id="logs">
+            <div id="events" class="logColumn">
+              <h1>Game Events</h1>
+              <div id="eventsLog" class="dataText">
+              </div>
+            </div>
+            <div id="infoUpdates" class="logColumn">
+              <h1>Info Updates</h1>
+              <div id="infoLog" class="dataText"></div>
+            </div>
           </div>
-        </div>
-        <div id="infoUpdates" class="logColumn">
-          <h1>Info Updates</h1>
-          <div id="infoLog" class="dataText"></div>
-        </div>
-      </div>
+          <div id="other">
+            <h1>Real-time Game Data</h1>
+            <p id="infoParagraph">
+              The background controller of this app is listening to all the game
+              events and info updates, and sends them to this window, that prints
+              them to the screen. Some specific events (Match Start/End, Kill and
+              Death) are painted in <span style="color: #00DEFA">teal</span> and
+              logged to the developers console.
+            </p>
+          </div>
 
 
-    <!-- Templates are copied for use when needed -->
-    <div id="templates">
-        <input id="template-button" type="button" class="selector-button">
+        <!-- Templates are copied for use when needed -->
+        <div id="templates">
+            <input id="template-button" type="button" class="selector-button">
 
-        <div id="template-gamepad" class="gamepad nodisp">
-            <div class="gamepad-title"></div>
-            (<div class="gamepad-mapping"></div>)
-            <div class="gamepad-id"></div>
-            <div class="gamepad-controls-center">
-                <div class="gamepad-controls">
-                    <div class="gamepad-buttons-box"></div>
-                    <div class="gamepad-axes-box"></div>
+            <div id="template-gamepad" class="gamepad nodisp">
+                <div class="gamepad-title"></div>
+                (<div class="gamepad-mapping"></div>)
+                <div class="gamepad-id"></div>
+                <div class="gamepad-controls-center">
+                    <div class="gamepad-controls">
+                        <div class="gamepad-buttons-box"></div>
+                        <div class="gamepad-axes-box"></div>
+                    </div>
                 </div>
             </div>
-        </div>
 
-        <div id="template-gamepad-button-container" class="gamepad-button-container">
-            <div class="gamepad-button"></div>
-            <div class="gamepad-button-label"></div>
-        </div>
-
-        <div id="template-gamepad-axis-pair-container" class="gamepad-axis-pair-container">
-            <div class="gamepad-axis-pair">
-                <div class="gamepad-circle nodisp"></div>
-                <div class="gamepad-axis-pip"></div>
-                <div class="gamepad-axis-crosshair">
-                    <div class="gamepad-axis-crosshair-v"></div>
-                    <div class="gamepad-axis-crosshair-h"></div>
-                </div>
+            <div id="template-gamepad-button-container" class="gamepad-button-container">
+                <div class="gamepad-button"></div>
+                <div class="gamepad-button-label"></div>
             </div>
-            <div class="gamepad-axis-pair-label"></div>
-            <div class="gamepad-axis-pair-value"></div>
+
+            <div id="template-gamepad-axis-pair-container" class="gamepad-axis-pair-container">
+                <div class="gamepad-axis-pair">
+                    <div class="gamepad-circle nodisp"></div>
+                    <div class="gamepad-axis-pip"></div>
+                    <div class="gamepad-axis-crosshair">
+                        <div class="gamepad-axis-crosshair-v"></div>
+                        <div class="gamepad-axis-crosshair-h"></div>
+                    </div>
+                </div>
+                <div class="gamepad-axis-pair-label"></div>
+                <div class="gamepad-axis-pair-value"></div>
+            </div>
         </div>
-    </div>
+    </main>
 
 </body>
 
